# boundary-aware-cooperative-transport

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.ja.md  README.md  README.zh-TW.md  README_DBACT.md  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
boundary-aware-cooperative-transport/: README.md
boundary-aware-cooperative-transport/docs/: ALGORITHM.md  ARCHITECTURE.md
boundary-aware-cooperative-transport/scripts/: make_repo_tree.py  run_all_scenarios.py
boundary-aware-cooperative-transport/tests/: test_controller_smoke.py  test_density.py
configs/mas/: controller.yaml  dtransport_mock.yaml
configs/sim/: baseline_unknown_polygon_caging_tight.yaml  decentralized_cvt_coverage.yaml  multi_object.yaml  nonconvex.yaml  one_circle_caging.yaml  one_nonconvex_polygon_caging.yaml  one_nonconvex_polygon_caging_tight.yaml  one_polygon_caging.yaml  one_rectangle_polygon_caging.yaml  one_rectangle_polygon_caging_tight.yaml  paper_like_irregular_moving_cargo.yaml
docs/: MAS_INTEGRATION.md  ROADMAP.md  daily_health_2026-05-30.md  daily_health_2026-06-03.md  daily_health_2026-06-08.md  daily_health_2026-06-18.md  repository_inventory_2026-06-03.md  repository_inventory_2026-06-08.md  stage1_results.md  stage2_mas_virtual_object.md  stage3_mas_dry_run.md  stage4_optitrack_readonly.md
scripts/: make_repo_tree.py  run_all_scenarios.py  run_mock_mas_pipeline.py  run_seven_s1_cvt_test.py
tests/: test_agent_control.py  test_cargo.py  test_decentralized_coverage.py  test_mas_adapter_import.py  test_mas_adapter_mock_pipeline.py
(+33 files in other folders)
