[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbact"
version = "0.1.0"
description = "Decentralized Boundary-Aware Cooperative Transportation for arbitrarily shaped objects."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "DBACT Contributors"}
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
